# diy-jbc

./: .gitignore  CMakeLists.txt  README.md  STM32G071.svd  STM32G071G8UXN_FLASH.ld  display.cpp  display.h  diy-jbc.ino  jbc.cpp  jbc.h  led.cpp  mainscreen.cpp  platformio.ini  ser_interface.cpp  ser_interface.h  serial.h  settings.cpp  settings.h  state.h  temperature.cpp  temperature.h  timers.h
Core/Hardware/Inc/: dma_ser_ui.h  dma_ws2812b.h  gpio_button.h  gpio_pwr.h  i2c.h  spi.h  stm32g0xx_it.h  tim_encoder.h  tim_ws2812b.h  usart_ser_ui.h
Core/Hardware/Src/: dma_ser_ui.c  dma_ws2812b.c  gpio_button.c  gpio_pwr.c  i2c.c  spi.c  stm32g0xx_it.c  sysclock.c  system_stm32g0xx.c  tim_encoder.c  tim_ws2812b.c  usart_ser_ui.c
Core/Inc/: display.h  eeprom.h  encoder.h  hw_define.h  main.h  pwr_ctrl.h  ser_ui.h  settings.h  temperature.h  u8g2_stm32g0xx_helper.h  ws2812b.h
Core/Src/: display.c  display_s_graph.c  display_s_main.c  display_s_menu.c  eeprom.c  encoder.c  gpio.c  main.c  pwr_ctrl.c  ser_ui.c  settings.c  temperature.c  u8g2_stm32g0xx_helper.c  ws2812b.c
Core/Src/pid/: pid.c  pid.h
Core/Src/u8g2/: u8x8_d_ssd1306_128x64_noname.c
_cube-project/: .cproject  .mxproject  .project  CubeProject.ioc  STM32G071GBUXN_FLASH.ld
_cube-project/Core/Inc/: i2c.h  main.h  stm32_assert.h  stm32g0xx_it.h  tim.h  usart.h
_cube-project/Core/Src/: dma.c  gpio.c  i2c.c  main.c  spi.c  stm32g0xx_it.c  tim.c  usart.c
display-interface/diy-jbc-display/: diy-jbc-display.ino
display-interface/diy-jbc-display/src/display/: display.cpp  input.cpp  input.h  screen.h  screenmanager.cpp
display-interface/diy-jbc-display/src/display/screens/graph/: graph.h
display-interface/diy-jbc-display/src/display/screens/mainscreen/: mainscreen.cpp
display-interface/diy-jbc-display/src/display/screens/menue/: menue.h
diy-jbc/: diy-jbc.ino  graph.cpp  graph.h  jbc.cpp  jbc.h  led.h  mainscreen.h  settings.h  temperature.cpp  temperature.h
diy-jbc/src/display/: display.cpp  display.h  graph.h  input.cpp  input.h  menue.cpp  menue.h  screen.h  screenmanager.cpp  screenmanager.h
diy-jbc/src/display/graphics/: graph_graphics.h
diy-jbc/src/display/screens/graph/: graph.h
diy-jbc/src/display/screens/mainscreen/: mainscreen.cpp  mainscreen.h
diy-jbc/src/display/screens/menue/: menue.cpp  menue.h
diy-jbc/src/ser_interface/: ser_interface.cpp  ser_interface.h
old_arduino_version/display-interface/: README.md  platformio.ini
old_arduino_version/display-interface/diy-jbc-display/src/display/: display.h  screenmanager.h
old_arduino_version/display-interface/diy-jbc-display/src/display/screens/graph/: graph.cpp
old_arduino_version/display-interface/diy-jbc-display/src/display/screens/graph/graphics/: graph_graphics.h
old_arduino_version/display-interface/diy-jbc-display/src/display/screens/mainscreen/: mainscreen.h
old_arduino_version/display-interface/diy-jbc-display/src/display/screens/menue/: menue.cpp
old_arduino_version/display-interface/diy-jbc-display/src/i2c-interface-main/: i2c-interface.cpp  i2c-interface.h
old_arduino_version/diy-jbc/: diy-jbc.ino  jbc.cpp  jbc.h  settings.cpp  settings.h  state.h  temperature.cpp  temperature.h
old_arduino_version/diy-jbc/src/i2c-interface-disp/: i2c-interface.cpp  i2c-interface.h
old_arduino_version/diy-jbc/src/led/: led.cpp  led.h
old_arduino_version/diy-jbc/src/ser_interface/: ser_interface.cpp  ser_interface.h
